crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_node_shows_open_location.txt
Q = (call
  (identifier)
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:5
  |
1 |   Q = (call
  |       ^ node started here
  |  _____|
  | |
2 | |   (identifier)
  | |______________^
  |
help: add `)` to close the node
